main.scss
html {
  font-size: 14px;
  font-family: Inconsolata, monospace;
}

* {
  box-sizing: border-box;
}

body {
  background: hsl(200, 7%, 97%);
  padding: 0;
  margin: 0;
}
@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translate3d(0, .5rem, 0);
  }

  to {
    opacity: 1;
    transform: none;
  }
}

.fadeInUp {
  animation-name: fadeInUp;
  will-change: transform, opacity;
  animation-duration: .6s;
}

.wow {
  visibility: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0 0 1rem;
}

h1 {
  font-family: Poppins, Avenir Next, -apple-system, MacBlinkSystemFont, sans-serif;
  font-weight: 600;
  line-height: 1.1;
}
@media screen and (max-width: 30em) {
  h1 {
    line-height: 1.3;
  }
}

.poppins {
  font-family: Poppins, Avenir Next, -apple-system, MacBlinkSystemFont, sans-serif;
}

.softBlue {
  color: hsl(207, 20%, 20%);
}

a {
  color: hsl(207, 50%, 60%);

  &:hover {
    opacity: .6;
    transition: .3s ease-in-out;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  color: hsl(207, 20%, 20%);
}

h3 {
  margin-bottom: .25rem;
  font-size: 1rem;
  font-weight: 600;
}

#info {
  padding-top: 2rem;
}

.side {
  position: absolute;
  font-size: 9rem;
  font-family: Poppins;
  font-weight: 700;
  transform: rotate(-90deg);
  white-space: nowrap;
  opacity: .1;
  letter-spacing: -0.05em;
  color: hsl(201, 90%, 35%);
  top: 50rem;
  left: 20rem;
}

.grid {
  max-width: 85rem;
}

article {
  font-size: 17px;

  ol,
  ul {
    padding-left: 1rem;
    margin-bottom: 2rem;
  }

  hr {
    display: block;
    height: 1px;
    border: 0;
    border-bottom: 1px solid #ddd;
    margin: 5rem 0;
    max-width: 25em;
  }

  h2 {
    margin-top: 4rem;
  }
}
@media screen and (min-width: 30em) and (max-width: 60em) {
  html {
    font-size: 17px;
  }
}
@media screen and (min-width: 90em) {
  html {
    font-size: 17px;
  }

  article {
    font-size: 21px;
  }
}
@media screen and (max-width: 30em) {
  article hr {
    margin: 3rem 0;
  }

  article {
    font-size: 14px;
  }
}

